<resources>
    <string name="app_name">ThinkableProject</string>
    <string name="thinkable">THINkable</string>
    <string name="get_start">Get Start</string>
    <string name="password">Password:</string>
    <string name="username">UserName:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email:</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="title_activity_landing_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="dob">DOB :</string>
    <string name="re_enter_password">Re Enter Password:</string>
    <string name="videos">Videos</string>
    <string name="music">Music</string>
    <string name="jan_01_2021">JAN 01 2021</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="what_are_your_preferences">What are your preferences?</string>
    <string name="choose_preferences">Choose preferences</string>
    <string name="bineural_waves">Bineural Waves</string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="done">Done</string>
    <string name="search_for_the_job">Search For Occupation</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="zero">0:00</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_retrieve_maps">RetrieveMapsActivity</string>
    <!--    <string name="default_web_client_id" translatable="false">417444273764-8063e4mavdbkqmlvhp1o10gb2snomk67.apps.googleusercontent.com</string>-->
    <string name="title_activity_retrieve_map">RetrieveMapActivity</string>
    <string name="CLIENT_CHARACTERISTIC_CONFIG">00002902-0000-1000-8000-00805f9b34fb"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startBtn">Start</string>
    <string name="pushStart">Push START</string>
    <string name="match">Correct</string>
    <string name="showHighscore">Highscore</string>
    <string name="newHighscore">New Highscore</string>
    <string name="title_activity_download">MainActivity</string>
    <string name="title_activity_downloading">MainActivity</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="msg_subscribe_failed">Subscribed Failed</string>
    <string name="msg_subscribed">Subscribe Sucessful</string>
    <string name="title_activity_ad_mob_add_actuivity">MainActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="title_activity_ads_mob_class">MainActivity</string>
    <string name="title_activity_adds_class">MainActivity</string>
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!--    <string name="update_profile">Update Profile</string>-->

    <string name="game8">8 puzzle</string>
    <string name="game15">15 puzzle</string>
    <string name="game24">24 puzzle</string>
    <string name="Score">Score: </string>
    <string name="bestScore">Record: </string>
    <string name="you_won">You have won! Congratulations!</string>
    <string name="about_title">About:</string>
    <string name="about_text"><b>15 puzzle</b>\n\nThe number in the title game is set on the number of cells. Each cell is numbered. One of the cells is not occupied. The player can move the cells by the free cell. Goal of the game - moving the cells of the box to achieve the ordering of numbers in ascending order, it is desirable to making as little as possible moves. Cells moved by pressing.\n\nby: <b> Mr. Alex</b></string>
    <string name="button">button</string>
    <string name="buttonSound">Sound ON or OFF</string>
    <string name="notSave">Saving missing! Press a new game.</string>
    <string name="level15">15</string>
    <string name="level24">24</string>
    <!--    <string name="action_settings">Settings</string>-->
    <string name="firstLogo">P</string>
    <string name="full_logo">Puzzle It</string>
    <string name="play">Play</string>
    <string name="leader_board">Leader Board</string>
    <string name="setting">Setting</string>
    <string name="board_24">24 board</string>
    <string name="board_15">15 board</string>
    <string name="board_8">8 board</string>
    <string name="difficulty_levels">Difficulty levels</string>
    <string name="choose">Choose</string>
    <string name="information">information</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="choose_language">Choose Language</string>
    <string name="sound_setting">Sound Setting</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound OFF</string>
    <string name="accept_changes">Accept Changes</string>
    <string name="info_dialog_button">I got it</string>
    <string name="info_title">how to play?</string>
    <string name="info_text_init">It\'s very simple to start but hard to finish</string>
    <string name="info_text">1) First chose the size of the board.\n2) There is no need to shuffle… we will do it\nfor you.\n3) You are ready. Play and injoy. Your goal is to move the puzzle parts to their place: the sequence you dicided to solve.\n \nAlso, take a tip form us: if you are unhappy with the starting position, or made a mistake you can just shuffle again and start from the beginning.\n \nAnd remember not everything is possible.</string>
    <string name="finished_dialog_text">Congratulations \n You won the game in</string>
    <string name="finished_steps"> Steps</string>
    <string name="finished_name">Please Enter Your Name</string>
    <string name="finished_edittext">Enter you Name</string>
    <string name="finished_button">Submit</string>
    <string name="you_won_toast">You Won the game, Go Back and try the Harder Board</string>
    <string name="you_won_24">You won the most difficult level\' new levels will open soon</string>
    <string name="mute_unmute_sound">Mute/Unmute Sound</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="empty">Empty</string>
    <string name="zoo">Zoo</string>
    <string name="playZoo">Play</string>
    <string name="_3x3">3X3</string>
    <string name="_4x4">4X4</string>
    <string name="_5x5">5X5</string>
    <string name="hint">Hint</string>
    <string name="firstMsg">First time ?\nTry 8 Board\nfor a warm up.</string>
    <string name="secondMsg">do you feel\nluck today?\ntry 24 board</string>
    <string name="lastMsg">before trying 24 board\ntry first 15 Board</string>
    <string name="choose_puzzle">Choose Puzzle</string>


</resources>