<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_detail"
    tools:context=".UserDetails">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:src="@drawable/image1"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePic"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/ic_person_black"
        android:textColorHint="@color/black"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        app:cornerRadius="23dp"
        android:hint=""
        android:background="@drawable/border_background"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/ic_email_black"
        android:textColorHint="@color/black"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        app:cornerRadius="23dp"
        android:hint=""
        android:background="@drawable/border_background"/>

    <LinearLayout
        android:layout_marginHorizontal="30dp"
        android:id="@+id/genderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="84dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/gender"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/textView9">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:paddingRight="1dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/radio_group"
                />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:textColor="@color/white"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radio_three"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:text="@string/other"
                android:textColor="@color/white"/>
        </RadioGroup>

    </LinearLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:hint=""
        android:layout_marginTop="25dp"
        android:textColorHint="@color/black"
        android:paddingVertical="10dp"
        android:drawableStart="@drawable/ic_bag_black"
        android:paddingHorizontal="10dp"
        android:layout_below="@+id/genderLayout"
        android:layout_marginHorizontal="30dp"
        android:drawableEnd="@drawable/ic_arrow_drop_down_circle"/>

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:hint=""
        android:layout_marginTop="25dp"
        android:textColorHint="@color/black"
        android:paddingVertical="10dp"
        android:drawableStart="@drawable/ic_cake"
        android:paddingHorizontal="10dp"
        android:layout_below="@+id/occupation"
        android:layout_marginHorizontal="30dp"
        android:drawableEnd="@drawable/ic_calendar_black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/dob"
        android:text="UPDATE"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:background="@drawable/updatebtn"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>

</ScrollView>