<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/preferences"
    android:gravity="center"
    tools:context=".PreferencesSecPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/relaxationPreference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/what_are_your_preferences"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/choosePreference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relaxationPreference"
            android:gravity="center_horizontal"
            android:text="@string/choose_preferences"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/layoutVideo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/choosePreference"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="@string/videos"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <CheckBox
                    android:id="@+id/checkBoxVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:buttonTint="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMusic"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutVideo"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="@string/music"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <CheckBox
                    android:id="@+id/checkBoxMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:buttonTint="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMeditation"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutMusic"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/meditation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="Meditation"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <CheckBox
                    android:id="@+id/checkBoxMeditation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:buttonTint="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutGames"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutMeditation"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/controller" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="Games"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <CheckBox
                    android:id="@+id/checkBoxGames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:buttonTint="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBneural"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutGames"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/binaural" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="@string/bineural_waves"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <CheckBox
                    android:id="@+id/checkBoxBineural"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:buttonTint="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKids"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutBneural"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/playtime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="Kids"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <CheckBox
                    android:id="@+id/checkBoxKids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:buttonTint="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSleepStories"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/layoutKids"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/book" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"
                android:text="@string/sleep_stories"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <CheckBox
                    android:id="@+id/checkBoxSleepStores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:buttonTint="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutSleepStories"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/done"
            android:textColor="@color/white" />


    </RelativeLayout>
</ScrollView>